feat: created the faden effect

--- a/app_home/templates/app_home/pages/home.html
+++ b/app_home/templates/app_home/pages/home.html
@@ -31,7 +31,7 @@
         <!-- logo and menu -->
         <section class="C-menu center_flex_row">
             <!-- logo -->
-            <div class="C-logo center_flex_row is_animated ">
+            <div class="C-logo center_flex_row">
                 <img src="{% static 'global/images/partial-logo.png' %}" alt="">
             </div>
             <!-- menu -->
@@ -53,7 +53,7 @@
             <p class="C-title__text is_animated">
                 treine com o personal <span class="C-title__span">maicon</span>
             </p>
-            <a href="" class="C-title__link">agende sua avaliação</a>
+            <a href="" class="C-title__link is_animated">agende sua avaliação</a>
         </section>
     </header>
 
@@ -63,7 +63,7 @@
         <section class="C-intro center_flex_column center_margin">
             <h1 class="C-intro__title">Benefícios do nosso treino</h1>
             <p class="C-intro__description">A prática regular de atividade física, com o acompanhamento de um profissional especializado, trás ínumeros benefícios, dentre eles:</p>
-            <div class="C-intro__card">
+            <div data-anime="left" class="C-intro__card">
                 <h2 class="C-intro__card_title">
                     Saúde e bem-estar
                 </h2>
@@ -71,7 +71,7 @@
                     A atividade física regular auxilia na prevenção do desenvolvimento de patologias, fortalecimento dos sistemas imunológico e musculoesquelético.
                 </p>
             </div>
-            <div class="C-intro__card">
+            <div data-anime="right" class="C-intro__card">
                 <h2 class="C-intro__card_title">
                     Produtividade e autoestima
                 </h2>
@@ -79,7 +79,7 @@
                     Pessoas que realizam exercícios físicos tendem a ser mais produtivas em sua rotina diária. A serotonina é conhecida como hormônio da felicidade, tendo sua produção aumentada durante o exercício físico.
                 </p>
             </div>
-            <div class="C-intro__card">
+            <div data-anime="left" class="C-intro__card">
                 <h2 class="C-intro__card_title">
                     Personal Trainer
                 </h2>
@@ -91,12 +91,12 @@
 
         <!-- personal profile -->
         <section class="C-profile center_flex_row">
-            <div class="C-profile_description">
+            <div data-anime="left" class="C-profile_description">
                 <h2>Conheça um pouco o professor Maicon</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum dolor corrupti qui ducimus quaerat mollitia facere non quam doloremque ad deleniti, in provident itaque adipisci assumenda sapiente veritatis et laborum.
                 Eius delectus harum culpa soluta, rem distinctio iusto voluptatem.</p>
             </div>
-            <div class="C-profile_image center_flex_row">
+            <div data-anime="right" class="C-profile_image center_flex_row">
                 <img src="{% static 'global/images/profile.jpeg' %}" alt="profile image">
                 <span class="C-profile_span"></span>
             </div>
@@ -105,7 +105,7 @@
         <!-- pre gallery -->
         <section class="C-pre_gallery center_flex_column">
             <div class="center_flex_row">
-                <div class="C-pre_gallery_images">
+                <div data-anime="left" class="C-pre_gallery_images">
                     <ul class="C-pre_gallery_ul">
                         <li class="C-pre_gallery_li">
                             <input type="radio" name="pre_gallery_img" id="img1" checked>
@@ -124,7 +124,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="C-pre_gallery_description">
+                <div data-anime="right" class="C-pre_gallery_description">
                     <h2>Espaço ideal para seu treino</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum, dolore vel? Illo animi saepe optio distinctio natus quod cumque maiores libero ipsa laborum odit recusandae, iure harum deleniti ipsum aut?
                     Odio facilis eius repudiandae facere, inventore nam, necessitatibus amet quia consequatur consectetur labore! Nostrum placeat officiis ratione ipsa neque sint illo magni, ad, harum fuga totam deserunt et! Accusamus, maiores?</p>
@@ -133,28 +133,28 @@
             <!-- services -->
             <section class="C-services center_flex_column">
                 <h2>Atendimento exclusivo e personalizado</h2>
-                <div class="C-services__flex center_flex_row">
-                    <div class="C-services__service">
+                <div data-anime="down" class="C-services__flex center_flex_row">
+                    <div data-anime="down" class="C-services__service">
                         <h2>treino indiviual</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, voluptatum?</p>
                     </div>
-                    <div class="C-services__service">
+                    <div data-anime="down" class="C-services__service">
                         <h2>treino em equipe</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, voluptatum?</p>
                     </div>
-                    <div class="C-services__service">
+                    <div data-anime="down" class="C-services__service">
                         <h2>equipamentos de ponta</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, voluptatum?</p>
                     </div>
-                    <div class="C-services__service">
+                    <div data-anime="down" class="C-services__service">
                         <h2>ambiente climatizado</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, voluptatum?</p>
                     </div>
-                    <div class="C-services__service">
+                    <div data-anime="down" class="C-services__service">
                         <h2>horários flexíveis</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, voluptatum?</p>
                     </div>
-                    <div class="C-services__service">
+                    <div data-anime="down" class="C-services__service">
                         <h2>localização central</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, voluptatum?</p>
                     </div>  
@@ -164,15 +164,15 @@
 
         <!-- contact and localization -->
         <section class="C-contact center_flex_row">
-            <div class="C-contact__contact center_flex_column">
+            <div class="C-contact__contact center_flex_column" data-anime="left">
                 <h2>entre em contato</h2>
                 <a href="" class="C-contact__link center_flex_row"><img src="{% static 'global/images/facebook.png' %}" alt="logo facebook"><p>@maicon_jose</p></a>
                 <a href="" class="C-contact__link center_flex_row"><img src="{% static 'global/images/instagram.png' %}" alt="logo instagram"><p>@maicon_jose</p></a>
                 <a href="" class="C-contact__link center_flex_row"><img src="{% static 'global/images/whatsapp.png' %}" alt="logo whatsapp"><p>(46) 9 9982-6472</p></a>
                 <p>Fone: (46) 9 9982-6472</p>
             </div>
-            <div class="C-contact__localization">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3583.522754172879!2d-53.05904328504772!3d-26.081849083492397!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f072d9fc39f61b%3A0x8fec623d0f0908ca!2sR.%20Rio%20G.%20do%20Sul%2C%201086%20-%20Alvorada%2C%20Francisco%20Beltr%C3%A3o%20-%20PR%2C%2085601-050!5e0!3m2!1spt-BR!2sbr!4v1677199562174!5m2!1spt-BR!2sbr" width="400" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="C-contact__localization" data-anime="right">
+                <iframe data-anime="right" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3583.522754172879!2d-53.05904328504772!3d-26.081849083492397!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f072d9fc39f61b%3A0x8fec623d0f0908ca!2sR.%20Rio%20G.%20do%20Sul%2C%201086%20-%20Alvorada%2C%20Francisco%20Beltr%C3%A3o%20-%20PR%2C%2085601-050!5e0!3m2!1spt-BR!2sbr!4v1677199562174!5m2!1spt-BR!2sbr" width="400" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
     </main>
@@ -191,6 +191,5 @@
         </div>
     </footer>
 </body>
-    <script src="{% static 'global/js/script.js' %}"></script>
-</body>
+<script src="{% static 'global/js/script.js' %}"></script>
 </html>
