--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -232,21 +232,21 @@ html, body {
   background-color: var(--blue-4);
   margin: 10px 0;
   padding: 20px;
-  animation-duration: 1.5s;
+  /* animation-duration: 1.5s;
   animation-timing-function: ease-in;
-  animation-fill-mode: forwards;
+  animation-fill-mode: forwards; */
 }
 
 .C-intro .C-intro__card:nth-of-type(1), .C-intro .C-intro__card:nth-of-type(3) {
   align-self: flex-start;
-  margin-left: -100%;
-  animation-name: to-show-intro-l;
+  /* margin-left: -100%;
+  animation-name: to-show-intro-l; */
 }
 
 .C-intro .C-intro__card:nth-of-type(2) {
   align-self: flex-end;
-  margin-right: -100%;
-  animation-name: to-show-intro-r;
+  /* margin-right: -100%;
+  animation-name: to-show-intro-r; */
 }
 
 .C-intro__card_title, .C-intro__card_description {
@@ -560,6 +560,28 @@ html, body {
 /* END FOOTER */
 
 /* START ANIMATION */
+[data-anime] {
+  opacity: 0;
+  transition: 1s;
+}
+
+[data-anime="left"] {
+  transform: translate3d(-50px, 0, 0);
+}
+
+[data-anime="right"] {
+  transform: translate3d(50px, 0, 0);
+}
+
+[data-anime="down"] {
+  transform: translate3d(0, 50px, 0);
+}
+
+[data-anime].animate {
+  opacity: 1;
+  transform: translate3d(0px, 0px, 0px);
+}
+
 @keyframes to-show-logo {
   from {
     opacity: 0;
