update: modified the style of scrollbar

--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -38,6 +38,19 @@ html, body {
   height: 100%;
 }
 
+body::-webkit-scrollbar {
+  width: 12px;               
+}
+
+body::-webkit-scrollbar-track {
+  background-color: var(--standard-gray);        
+}
+
+body::-webkit-scrollbar-thumb {    
+  background-color: var(--std-white-transparent);
+  border-radius: 20px;       
+}
+
 /* GENERICS */
 
 .is_closed {
